contrast fix

--- a/WDD230/chamber/styles/base.css
+++ b/WDD230/chamber/styles/base.css
@@ -252,6 +252,11 @@
         text-align: center;
     }
 
+    #event a{
+        color: var(--paragraph-background-color);
+        font-weight: bolder;
+    }
+
     .content-title{
         font-size: 4vw;
         text-align: center;
